# countDelay-rs

./: .gitattributes  .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml
.cargo/: config.toml
docs/en/: README.md
scripts/: build-sidecar.ps1  generate-fixtures.ps1  verify-ffmpeg-sdk.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  ffmpeg_sdk.rs  lib.rs  main.rs  state.rs  worker_sidecar.rs
src-tauri/video-worker/: Cargo.toml  build.rs
src-tauri/video-worker/src/: ffmpeg.rs  lib.rs  main.rs  worker.rs
src-tauri/video-worker/tests/: drain_errors.rs  frame_pipeline.rs  open_video.rs  probe_video.rs
src/components/: Controls.tsx  FrameCanvas.tsx  MeasurementTable.tsx
src/hooks/: useHotkeys.ts  useSession.ts
src/lib/: format.ts  tauri.ts
src/test/: format.test.ts  setup.ts  useHotkeys.test.ts  useSession.test.ts
src/types/: measurement.ts  session.ts
tests/fixtures/: manifest.json
tests/fixtures/source/: README.md
