[package]
name = "video-worker"
version = "0.1.0"
edition = "2021"

[lib]
name = "video_worker"
path = "src/lib.rs"

[[bin]]
name = "video-worker"
path = "src/main.rs"

[dependencies]
ffmpeg-sys-next = "8.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
